tests/compile_fail/logic_macro_malformed_assert.stderr
error: expected `:`
 --> tests/compile_fail/logic_macro_malformed_assert.rs:6:26
  |
6 |             assert count = count.value();
  |                          ^
